# opengl-base

./: CMakeLists.txt  README.md
include/: buffer_layout.hh  cube.hh  graphics.hh  ibo.hh  program.hh  renderer.hh  shader.hh  texture.hh  vao.hh  vbo.hh
include/glad/: glad.h
shaders/: cube.frag  cube.vert  image.frag  image.vert
src/: buffer_layout.cc  cube.cc  glad.c  ibo.cc  main.cc  program.cc  renderer.cc  texture.cc  vao.cc  vbo.cc
